CMake: Add support for doing a nested build of libc++ from Clang's CMake infrastructure, using the Clang compiler that is being built as the compiler for libc++.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,8 +7,13 @@ macro(pythonize_bool var)
 endmacro()
 
 include(FindPythonInterp)
-if(PYTHONINTERP_FOUND)
-  set(LIT_EXECUTABLE "" CACHE FILEPATH "Path to LLVM's lit.py.")
+if (PYTHONINTERP_FOUND)
+  if (NOT CLANG_BOOTSTRAPPING)
+    set(LIT_EXECUTABLE "" CACHE FILEPATH "Path to LLVM's lit.py.")
+  else()
+    set(LIT_EXECUTABLE "${LLVM_SOURCE_DIR}/utils/lit/lit.py" "" CACHE FILEPATH "Path to LLVM's lit.py")
+  endif()
+
   set(LIT_ARGS_DEFAULT "-sv")
   if (MSVC OR XCODE)
     set(LIT_ARGS_DEFAULT "${LIT_ARGS_DEFAULT} --no-progress-bar")
@@ -18,7 +23,12 @@ if(PYTHONINTERP_FOUND)
   set(LIT_ARGS "${LLVM_LIT_ARGS}")
   separate_arguments(LIT_ARGS)
 
-  set(LIBCXX_COMPILER ${CMAKE_CXX_COMPILER})
+  if (NOT CLANG_BOOTSTRAPPING)
+    set(LIBCXX_COMPILER ${CMAKE_CXX_COMPILER})
+  else()
+    set(LIBCXX_COMPILER ${CLANG_BOOTSTRAP_CXX_DRIVER})
+  endif()
+
   set(LIBCXX_SOURCE_DIR ${CMAKE_SOURCE_DIR})
   set(LIBCXX_BINARY_DIR ${CMAKE_BINARY_DIR})
   set(PYTHON_EXECUTABLE ${PYTHON_EXECUTABLE})
@@ -42,3 +52,4 @@ if(PYTHONINTERP_FOUND)
 else()
   message(WARNING "Could not find Python, no libcxx.check target will be available!")
 endif()
+
