Fix a few lit things.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,9 +9,10 @@ endmacro()
 include(FindPythonInterp)
 if (PYTHONINTERP_FOUND)
   if (NOT CLANG_BOOTSTRAPPING)
-    set(LIT_EXECUTABLE "" CACHE FILEPATH "Path to LLVM's lit.py.")
+    set(LIT_EXECUTABLE "" CACHE FILEPATH "Path to llvm-lit.")
   else()
-    set(LIT_EXECUTABLE "${LLVM_SOURCE_DIR}/utils/lit/lit.py" "" CACHE FILEPATH "Path to LLVM's lit.py")
+    set(LIT_EXECUTABLE "${LLVM_BINARY_DIR}/bin/${CMAKE_CFG_INTDIR}/llvm-lit"
+        CACHE FILEPATH "Path to llvm-lit.")
   endif()
 
   set(LIT_ARGS_DEFAULT "-sv")
@@ -29,8 +30,8 @@ if (PYTHONINTERP_FOUND)
     set(LIBCXX_COMPILER ${CLANG_BOOTSTRAP_CXX_DRIVER})
   endif()
 
-  set(LIBCXX_SOURCE_DIR ${CMAKE_SOURCE_DIR})
-  set(LIBCXX_BINARY_DIR ${CMAKE_BINARY_DIR})
+  set(LIBCXX_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../)
+  set(LIBCXX_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/../)
   set(PYTHON_EXECUTABLE ${PYTHON_EXECUTABLE})
   pythonize_bool(LIBCXX_ENABLE_SHARED)
   pythonize_bool(LIBCXX_HAS_STDCXX0X_FLAG)
