--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -62,9 +62,8 @@ class LibcxxTestFormat(lit.formats.FileBasedTest):
                 report += "\n\nExpected compilation to fail!"
                 return lit.Test.FAIL, report
         else:
-            exec_file = tempfile.NamedTemporaryFile(suffix="exe", delete=False)
-            exec_path = exec_file.name
-            exec_file.close()
+            import uuid
+            exec_path = "/tmp/%s" % uuid.uuid4()
 
             try:
                 compile_cmd = [self.cxx_under_test, '-o', exec_path,
@@ -119,36 +118,36 @@ if cxx_under_test is None:
     if cxx_under_test is None:
         lit.fatal('must specify user parameter cxx_under_test '
                   '(e.g., --param=cxx_under_test=clang++)')
-include_paths = []
-library_paths = []
+#include_paths = []
+#library_paths = []
 
-libcxx_src_root = getattr(config, 'libcxx_src_root', None)
-if libcxx_src_root is not None:
-  include_paths += ['-I' + libcxx_src_root + '/include']
-else:
-  include_paths += ['-I/usr/include/c++/v1']
+#libcxx_src_root = getattr(config, 'libcxx_src_root', None)
+#if libcxx_src_root is not None:
+#  include_paths += ['-I' + libcxx_src_root + '/include']
+#else:
+#  include_paths += ['-I/usr/include/c++/v1']
 
-libcxx_obj_root = getattr(config, 'libcxx_obj_root', None)
-if libcxx_obj_root is not None:
-  library_paths += ['-L' + libcxx_obj_root + '/lib']
-else:
-  libcxx_obj_root = "/usr"
+#libcxx_obj_root = getattr(config, 'libcxx_obj_root', None)
+#if libcxx_obj_root is not None:
+#  library_paths += ['-L' + libcxx_obj_root + '/lib']
+#else:
+#  libcxx_obj_root = "/usr"
 
 # Configure extra compiler flags.
-compile_flags = []
-if getattr(config, 'cxx_has_stdcxx0x_flag', False):
-  compile_flags += ['-std=c++0x']
+#compile_flags = []
+#if getattr(config, 'cxx_has_stdcxx0x_flag', False):
+#  compile_flags += ['-std=c++0x']
 
 # Configure extra libraries.
-libraries = []
-if sys.platform == 'darwin':
-  libraries += ['-lSystem']
-if sys.platform == 'linux2':
-  libraries += ['-lgcc_eh', '-lsupc++', '-lc', '-lm', '-lrt', '-lgcc_s']
-  libraries += ['-Wl,-R', libcxx_obj_root + '/lib']
+#libraries = []
+#if sys.platform == 'darwin':
+#  libraries += ['-lSystem']
+#if sys.platform == 'linux2':
+#  libraries += ['-lgcc_eh', '-lsupc++', '-lc', '-lm', '-lrt', '-lgcc_s']
+#  libraries += ['-Wl,-R', libcxx_obj_root + '/lib']
 
 config.test_format = LibcxxTestFormat(cxx_under_test,
-                                      cpp_flags = ['-nostdinc++'] + compile_flags + include_paths,
-                                      ld_flags = ['-nodefaultlibs'] + library_paths + ['-lc++'] + libraries)
+                                      cpp_flags = ['-std=c++0x'],
+                                      ld_flags = []) 
 
 config.target_triple = None
